# wgsl-dump

./: .editorconfig  .gitignore  Cargo.toml  README.md  REUSE.toml
.github/workflows/: rust.yml
src/: dump.rs  main.rs  parse.rs
